--- a/settings.json.example
+++ b/settings.json.example
@@ -8,8 +8,7 @@
     {"name": "Finance", "securityGroups": ["SGFinanceTeam"]},
     {"name": "Design", "securityGroups": ["SGDesignTeam"]},
     {"name": "Web", "securityGroups": ["SGWebTeam"]},
-    {"name": "App Dev", "securityGroups": ["SGAppDevTeam"]},
-    {"name": "Help Desk", "securityGroups: ["SGHelpDesk]}
+    {"name": "App Dev", "securityGroups": ["SGAppDevTeam"]}
   ],
   "ldapDummy": {
     "username": "ldaptestaccount",
