--- a/settings.json.example
+++ b/settings.json.example
@@ -9,7 +9,7 @@
     {"name": "Design", "securityGroups": ["SGDesignTeam"]},
     {"name": "Web", "securityGroups": ["SGWebTeam"]},
     {"name": "App Dev", "securityGroups": ["SGAppDevTeam"]},
-    {"name": "Help Desk", "securityGroups": ["SGHelpDeskTeam"], "email": "help@triage.university.edu"}
+    {"name": "Help Desk", "securityGroups": ["SGHelpDeskTeam"], "emails": ["help@triage.university.edu"]}
   ],
   "ldapDummy": {
     "username": "ldaptestaccount",
