Add statute of limitations after which Closed tickets can't be reopened.

--- a/settings.json.example
+++ b/settings.json.example
@@ -20,7 +20,8 @@
   ],
   "public": {
     "pageLimitDefault": 20,
-    "pageLimitIncrement": 20
+    "pageLimitIncrement": 20,
+    "reopenAllowedTimespan": 604800
   },
   "email": {
     "sendEmailOnFormSubmit": false,
